# vtec

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  vtecConfig.cmake.in
include/homography_optimizer/: AbstractHomographyOptimizer.h  HomographyOptimizerFactory.h  aux.h  esm_expm.h  homography_optimizer_interface.h  ibg.h  ibg_interface.h  mask.h  types.h  unified.h
include/vtec_core/: draw.h  image.h  types.h
lib/: libhomography_optimizer.so.1  libhomography_optimizer.so.1.0.0  libhomography_optimizer.so.1.0.1  libhomography_optimizer.so.1.0.2  libhomography_optimizer.so.2  libhomography_optimizer.so.2.0.0  libhomography_optimizer.so.2.0.1  libhomography_optimizer.so.2.1.0  libhomography_optimizer.so.kinetic  libhomography_optimizer_noXfeatures.so.2  libhomography_optimizer_noXfeatures.so.2.0.1
seq/: im000.pgm  im001.pgm  im002.pgm  im003.pgm  im004.pgm  im005.pgm  im006.pgm  im007.pgm  im008.pgm  im009.pgm
src/: ibg_optimize_homography_example.cpp  ibg_tracker_example.cpp  ibg_tracker_robust_example.cpp  ibg_tracker_with_predictor_example.cpp  unified_tracker_example.cpp  vtec_ibg_optimize_homography_example.cpp  vtec_ibg_tracker_example.cpp
